# AI

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
app/: main.py
app/api/: dependencies.py  router.py
app/api/routes/: diagnosis.py  health.py  ocr.py  reading.py  speech.py  text.py  training.py
app/core/: audio_storage.py  config.py  errors.py
app/pipelines/: README.md  reading_pipeline.py
app/prompts/: README.md  simplify_system.txt
app/providers/: base.py  factory.py  mock.py  real.py
app/providers/clients/: llm_client.py  ocr_client.py  stt_client.py  tts_client.py
app/schemas/: common.py  diagnosis.py  ocr.py  reading.py  speech.py  text.py  training.py
app/services/: diagnosis_service.py  ocr_service.py  reading_service.py  speech_service.py  text_service.py  training_service.py
ddobak_inference_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: synthesize_and_save.py  tts_direct_test.py
tests/: test_health.py  test_reading.py
