[project]
name = "ddobak-inference-server"
version = "0.1.0"
description = "또박또박 난독증 학습 도우미 인퍼런스 서버"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic-settings",
  "python-multipart",
  "edge-tts>=7.2.8",
  "faster-whisper>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx",
  "pytest",
  "ruff",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
